--- a/about.html
+++ b/about.html
@@ -35,20 +35,20 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link active" href="#">About Me</a>
     </div>
         </div>
       </div>
     </nav>
-
     <header class="page-header header container-fluid background">
         <div class="overlay"></div>
         <div class="description">
             <h1>Coming Soon!!</h1>
             <p>Nice to meet you! This page will contain more personal facts about me, 
-              including my travel blogs and photos, piano videos, and opinion posts etc.
               It will be available soon!
-              Meanwhile, please go to my <a href="index.html">home page</a>. Thanks!
+              Meanwhile, please go to my <a href="index.html">home page</a> and 
+              especially check out <a href="index.html#section2">my research projects</a>!
             </p>
         </div>
     </header>
@@ -63,6 +63,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link active" href="#">About Me</a>
           </div>
         </div>
