--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
     </div>
         </div>
@@ -323,7 +324,6 @@
                             </ul>
                       </div>
                       <div class="tab-pane fade" id="list-Websites" role="tabpanel" aria-labelledby="list-Websites-list">
-                          <p>
                             <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://tonypan2000.github.io/Haystack">Haystack</a><br>
                               HTML, Javascript, PHP, and SQL website built for a proposed student organization.
                               <br><br><br><br>
@@ -331,23 +331,27 @@
                               HTML and PHP website built for my high school robotics team. The site includes several 
                               <a target="_blank" href="https://frc3175.github.io/Team-Website/tutorials.html">tutorials</a>
                               teaching middle schoolers how to do robotics.
-                          </p>
                       </div>
                       <div class="tab-pane fade" id="list-Java" role="tabpanel" aria-labelledby="list-Java-list">
-                          <p><a class="btn btn-outline-primary btn-lg" target="_blank" href="https://github.com/tonypan2000/MulticulturalTV">Multicultural TV</a><br>
-                        Streams multiple Youtube channels on one screen, made it for a large TV screen in my high school
-                        <br><br>
-                        <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://github.com/tonypan2000/FRC-2018-Scouting">FRC Scouting App</a><br>                          
-                        Helps FRC teams observe the performance of other teams by gathering statistics during mathces, built for my high school robotics team
-                        <br><br>
-                        <a class="btn btn-outline-primary btn-lg" target="_blank" href="#">Breakout Extra</a><br>                          
-                        Brick breaker game written as an extension to a coding assignment in Stanford CS 106A Programming Methodology.
-                        <br><br>
-                        <a class="btn btn-outline-primary btn-lg" target="_blank" href="#">Wheel of Fortune</a><br>                          
-                        Wheel of Fortune was an extension to the Hangman coding project in Stanford CS 106A
-                        <br><br>
-                        </p>
-                      </div>
+                        <ul style="list-style-type: none">
+                          <li>
+                              <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://github.com/tonypan2000/MulticulturalTV">Multicultural TV</a><br>
+                              Streams multiple Youtube channels on one screen, made it for a large TV screen in my high school
+                          </li>
+                          <li>
+                              <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://github.com/tonypan2000/FRC-2018-Scouting">FRC Scouting App</a><br>                          
+                              Helps FRC teams observe the performance of other teams by gathering statistics during mathces, built for my high school robotics team
+                          </li>
+                          <li>
+                              <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://drive.google.com/file/d/1iwZy4gBRt-MWtgYyc_pqChyAcboNmkhW/view?usp=sharing">Breakout Extra</a><br>                          
+                              Brick breaker game written as an extension to a coding assignment in Stanford CS 106A Programming Methodology.
+                          </li>
+                          <li>
+                              <a class="btn btn-outline-primary btn-lg" target="_blank" href="#">Wheel of Fortune</a><br>                          
+                              Wheel of Fortune was an extension to the Hangman coding project in Stanford CS 106A
+                          </li>
+                        </ul>
+                        </div>
                       <div class="tab-pane fade" id="list-Other" role="tabpanel" aria-labelledby="list-Other-list">
                         <p>Programming Languages:<br>
                         C/C++, Java, Git, HTML, Python, ImageJ Macro, SOAR, Linux, MATLAB, Assembly, Ruby<br><br><br><br>
@@ -370,6 +374,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
           </div>
         </div>
