--- a/weizmann.html
+++ b/weizmann.html
@@ -35,6 +35,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
     </div>
         </div>
@@ -89,7 +90,7 @@
                             I was interviewed by several newspapers, and here are some of the stories about 
                             my ISSI experience:
                           </p>
-                          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FWeizmannUSA%2Fposts%2F10156875212054940&width=500" width="500" height="604" style="border:none;overflow:hidden" allow="encrypted-media"></iframe> 
+                          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FWeizmannUSA%2Fposts%2F10156875212054940&" height="604" style="border:none;overflow:hidden" allow="encrypted-media"></iframe> 
                           <dl class="row">
                               <dt class="col-sm-3">Grosse Pointe News</dt>
                               <dd class="col-sm-9">
@@ -132,6 +133,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
           </div>
         </div>
