--- a/isef.html
+++ b/isef.html
@@ -35,6 +35,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
     </div>
         </div>
@@ -130,6 +131,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
           </div>
         </div>
