--- a/spie.html
+++ b/spie.html
@@ -35,6 +35,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
     </div>
         </div>
@@ -75,7 +76,7 @@
                              visualisation during real-time intraoperative vascular imaging in vivo.
                         </p>
                         <div class="text-center">
-                                <a href="https://doi.org/10.1117/12.2510378" target="_blank" class="btn btn-danger btn-lg">Watch the Presentation at SPIE Digital Library</a>
+                                <a href="https://doi.org/10.1117/12.2510378" target="_blank" class="btn btn-danger btn-lg">Watch the Presentation at SPIE</a>
                             </div>
                         <br>
                         <p>
@@ -99,6 +100,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="index.html#section2">Research</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
           </div>
         </div>
