--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       gtag('config', 'UA-105323938-3');
     </script>
-
+<meta name="google-site-verification" content="BzKJ-gze3SYrA7uwFtK2go6UOo6lQkzsoMhWqmP98vQ" />
   </head>
 
   <body>
