--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
   </div>
-  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos taken by Tony Pan</div>
+  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. All rights reserved.</div>
   </div>
 </footer>
 
