--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
+  <!-- Hey there what's up? The ceiling-->
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="BzKJ-gze3SYrA7uwFtK2go6UOo6lQkzsoMhWqmP98vQ" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <!-- Add icon library -->
+    <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="canonical" content="tonypan.us"/>
 
     <title>Tony Pan | Welcome to my site</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,7 +22,6 @@
 
       gtag('config', 'UA-105323938-3');
     </script>
-<meta name="google-site-verification" content="BzKJ-gze3SYrA7uwFtK2go6UOo6lQkzsoMhWqmP98vQ" />
   </head>
 
   <body>
@@ -216,7 +217,7 @@
                               <div class="card-body">
                                   <h5 class="card-title">Publication</h5>
                                   <p class="card-text">Machine Learning Assisted Blood Vessel Segmentation in Laser Speckle Imaging</p>
-                                  <a href="spie.html" target="_blank" class="btn btn-primary btn-lg">Details</a>
+                                  <a href="spie.html" target="_blank" class="btn btn-primary btn-lg button-glow">Details</a>
                                   <p class="card-text"><small class="text-muted">Published in March 2019</small></p>
                                 </div>
                           </div>
@@ -231,7 +232,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Summer Research Fellow</h5>
                                     <p class="card-text">International Summer Science Institute at the Weizamnn Institute of Science</p>
-                                    <a href="weizmann.html" target="_blank" class="btn btn-primary btn-lg">Details</a>
+                                    <a href="weizmann.html" target="_blank" class="btn btn-primary btn-lg button-glow">Details</a>
                                     <p class="card-text"><small class="text-muted">Participated in July 2018</small></p>
                                   </div>
                             </div>
@@ -246,7 +247,7 @@
                                   <div class="card-body">
                                       <h5 class="card-title">Intel ISEF</h5>
                                       <p class="card-text">Intel International science and Engineering Fair (ISEF) Finalist</p>
-                                      <a href="isef.html" target="_blank" class="btn btn-primary btn-lg">Details</a>
+                                      <a href="isef.html" target="_blank" class="btn btn-primary btn-lg button-glow">Details</a>
                                       <p class="card-text"><small class="text-muted">Competed in May 2018</small></p>
                                     </div>
                               </div>
