--- a/weizmann.html
+++ b/weizmann.html
@@ -81,7 +81,7 @@
                           <br>
                           <p>
                             I was invited to give an 
-                            <a target="_blank" href="spie.html" class="card-link">oral presentation</a>
+                            <a href="spie.html" class="card-link">oral presentation</a>
                              at a research conference.
                           </p>
                           <br>
@@ -90,7 +90,7 @@
                             I was interviewed by several newspapers, and here are some of the stories about 
                             my ISSI experience:
                           </p>
-                          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FWeizmannUSA%2Fposts%2F10156875212054940&" height="604" style="border:none;overflow:hidden" allow="encrypted-media"></iframe> 
+                          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FWeizmannUSA%2Fposts%2F10156875212054940&width=500" width="100%" height="604" style="border:none;overflow:hidden" allow="encrypted-media"></iframe> 
                           <dl class="row">
                               <dt class="col-sm-3">Grosse Pointe News</dt>
                               <dd class="col-sm-9">
@@ -115,7 +115,7 @@
                             <p>
                                 I was awarded this all-expense-paid-for trip of a lifetime by SEFMD, which selected one high school senior
                                 from the grand award winners of the annual Detroit Science and Engineering Fair. Read about my
-                                <a target="_blank" href="isef.html">high school science project</a> 
+                                <a href="isef.html">high school science project</a> 
                                 that earned me this opportunity.
                             </p>
                         <a href="index.html#section2" class="card-link">Go Back</a>
