--- a/isef.html
+++ b/isef.html
@@ -84,8 +84,8 @@
                   <p>
                       <i>Keywords: energy storage, graphene, capacitor, LightScribe</i>
                   </p>
-                  <a href="files/ISEF_paper.pdf" class="btn btn-outline-primary">Read my Paper</a>
-                  <a href="files/ISEF_poster.pdf" class="btn btn-outline-primary">See my Poster</a>
+                  <a target="_blank" href="files/ISEF_paper.pdf" class="btn btn-outline-primary">Read my Paper</a>
+                  <a target="_blank" href="files/ISEF_poster.pdf" class="btn btn-outline-primary">See my Poster</a>
                   <br><br>
                   <h5 class="card-title text-center">Awards</h5>
                   <p>Here are the awards that I won with this project at the local and state level:</p>
@@ -115,7 +115,7 @@
                     <p>This project was conducted at my high school as a part of the Academic Research Program.
                       Here are some details from the <a target="_blank" href="https://www.uls.org/news-detail?pk=1171379">school website</a>.
                     </p>
-                  <a target="_blank" href="weizmann.html" class="card-link">Read about ISSI</a>
+                  <a href="weizmann.html" class="card-link">Read about ISSI</a>
                   <a href="index.html#section2" class="card-link">Go Back</a>
                     </div>
                 </div>
