--- a/spie.html
+++ b/spie.html
@@ -84,7 +84,7 @@
                         under the mentorship of Prof. Vyacheslav Kalchenko as a part of the International 
                         Summer Science Institute (ISSI) program.
                         </p>
-                        <a target="_blank" href="weizmann.html" class="card-link">Read about ISSI</a>
+                        <a href="weizmann.html" class="card-link">Read about ISSI</a>
                         <a href="index.html#section2" class="card-link">Go Back</a>
                     </div>
                 </div>
