--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                               Brick breaker game written as an extension to a coding assignment in Stanford CS 106A Programming Methodology.
                           </li>
                           <li>
-                              <a class="btn btn-outline-primary btn-lg" target="_blank" href="#">Wheel of Fortune</a><br>                          
+                              <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://drive.google.com/file/d/1HknVlaUNeXpQTPQn1DsJ9WPmFPXxIzd3/view?usp=sharing">Wheel of Fortune</a><br>                          
                               Wheel of Fortune was an extension to the Hangman coding project in Stanford CS 106A
                           </li>
                         </ul>
