iphone responsive fix

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   <header class="page-header header container-fluid">
         <div class="overlay"></div>
         <div class="description">
-            <h1>You have found my personal website!</h1>
+            <h1>You have found my website!</h1>
             <p>Welcome! My name is Tony Pan. I am a Computer Science student and research assistant 
-              at the University of Michigan College of Engineering. 
+              at the University of Michigan. 
               Explore this site to learn more about me.
             </p>
         </div>
