--- a/spie.html
+++ b/spie.html
@@ -85,7 +85,7 @@
                         Summer Science Institute (ISSI) program.
                         </p>
                         <a href="weizmann.html" class="card-link">Read about ISSI</a>
-                        <a href="index.html#section2" class="card-link">Go Back</a>
+                        <a href="index.html#section2" class="card-link" onclick="windowClose();">Close Tab</a>
                     </div>
                 </div>
     </div>
