--- a/weizmann.html
+++ b/weizmann.html
@@ -118,7 +118,7 @@
                                 <a href="isef.html">high school science project</a> 
                                 that earned me this opportunity.
                             </p>
-                        <a href="index.html#section2" class="card-link">Go Back</a>
+                        <a href="index.html#section2" class="card-link" onclick="windowClose();">Close Tab</a>
                     </div>
                 </div>
     </div>
