--- a/isef.html
+++ b/isef.html
@@ -116,7 +116,7 @@
                       Here are some details from the <a target="_blank" href="https://www.uls.org/news-detail?pk=1171379">school website</a>.
                     </p>
                   <a href="weizmann.html" class="card-link">Read about ISSI</a>
-                  <a href="index.html#section2" class="card-link">Go Back</a>
+                  <a href="index.html#section2" class="card-link" onclick="windowClose();">Close Tab</a>
                     </div>
                 </div>
     </div>
