stop google translate

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <!-- Hey there what's up? The ceiling-->
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="BzKJ-gze3SYrA7uwFtK2go6UOo6lQkzsoMhWqmP98vQ" />
     <!-- Bootstrap CSS -->
