--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- As a link -->
   <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tony Pan</a>
+        <a class="navbar-brand" href="#" id="title"><b>Tony Pan</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -391,7 +391,7 @@
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
   </div>
-  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos taken by Tony Pan</div>
+  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. All rights reserved.</div>
   </div>
 </footer>
 
