--- a/isef.html
+++ b/isef.html
@@ -27,7 +27,7 @@
   <!-- As a link -->
   <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Tony Pan</a>
+      <a class="navbar-brand" href="index.html" id="title"><b>Tony Pan</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
