added thumbnail preview

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-us">
   <head>
     <!-- What's popping? The stack, queue, dequeue...-->
     <meta charset="utf-8">
