--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-us">
   <!-- Hey there what's up? The ceiling-->
   <head>
     <meta charset="UTF-8">
