--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en-us">
   <!-- Hey there what's up? The ceiling-->
   <head>
+    <meta property="og:image" content="images/preview.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tony Pan | Welcome to my site" />
+    <meta property="og:url" content="https://tonypan.us" />
+    <meta property="og:description" content="Tony Pan's personal website" />
     <meta charset="UTF-8">
     <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="BzKJ-gze3SYrA7uwFtK2go6UOo6lQkzsoMhWqmP98vQ" />
-    <meta property="og:image" content="images/preview.jpg" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
