added font, updated resume

--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                             </ul>
                         <h6>SOAR Cognitive Architecture</h6>  
                         <ul style="list-style-type:disc;">
-                              <li>Write robotics code to control Anki Cozmo robots in Python</li>
-                              <li>Write SOAR production code to integrate with Cozmo robots</li>
+                              <li>Wrote Python code to control Anki Cozmo robots</li>
+                              <li>Wrote SOAR production code to integrate with Cozmo robots</li>
                             </ul>
                         <h6>Weizmann ISSI</h6>  
                         <ul style="list-style-type:disc;">
@@ -351,11 +351,11 @@
                           </li>
                           <li>
                               <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://drive.google.com/file/d/1iwZy4gBRt-MWtgYyc_pqChyAcboNmkhW/view?usp=sharing">Breakout Extra</a><br>                          
-                              Brick breaker game written as an extension to a coding assignment in Stanford CS 106A Programming Methodology.
+                              Brick breaker game, extension to a coding assignment in Stanford CS 106A Programming Methodology.
                           </li>
                           <li>
                               <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://drive.google.com/file/d/1HknVlaUNeXpQTPQn1DsJ9WPmFPXxIzd3/view?usp=sharing">Wheel of Fortune</a><br>                          
-                              Wheel of Fortune was an extension to the Hangman coding project in Stanford CS 106A
+                              Wheel of Fortune, extension to the Hangman coding project in Stanford CS 106A
                           </li>
                         </ul>
                         </div>
