--- a/isef.html
+++ b/isef.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en-us">
   <head>
+    <!--wot up nerds-->
     <meta charset="utf-8">
     <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
