--- a/index.html
+++ b/index.html
@@ -213,7 +213,41 @@
                   </ol>
                   <!--/.Indicators-->
                   <div class="carousel-inner row w-100 mx-auto" role="listbox">
-                        <div class="carousel-item col-md-4 active">
+                      <div class="carousel-item col-md-4 active">
+                          <div class="card research-card">
+                            <div class="card-img-top card-img-top-250">
+                                <div class="card-img-top card-img-top-250">
+                                    <figure>
+                                        <img class="img-fluid" src="images/soar.jpg" alt="Soar Cognitive Architecture">
+                                    </figure>
+                                  </div>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Assistant in Research</h5>
+                                <p class="card-text">Keywords: Intelligent Robotics, Computer Vision, Reinforcement Learning</p>
+                                <a href="soar.html" target="_blank" class="btn btn-primary btn-lg button-glow">Details</a>
+                                <p class="card-text"><small class="text-muted">January 2019 - present</small></p>
+                              </div>
+                        </div>
+                        </div>
+                        <div class="carousel-item col-md-4">
+                            <div class="card research-card">
+                              <div class="card-img-top card-img-top-250">
+                                  <div class="card-img-top card-img-top-250">
+                                      <figure>
+                                          <img class="img-fluid" src="images/anki.jpg" alt="Anki Cozmo and Vector">
+                                      </figure>
+                                    </div>
+                              </div>
+                              <div class="card-body">
+                                  <h5 class="card-title">Current Project</h5>
+                                  <p class="card-text">Keywords: Robot Mapping, Human Spatial Knowledge, Mobile Robotics</p>
+                                  <a href="hssh.html" target="_blank" class="btn btn-primary btn-lg button-glow">Details</a>
+                                  <p class="card-text"><small class="text-muted">November 2018 - present</small></p>
+                                </div>
+                          </div>
+                          </div>
+                        <div class="carousel-item col-md-4">
                             <div class="card research-card">
                               <div class="card-img-top card-img-top-250">
                                 <figure>
@@ -246,6 +280,20 @@
                             <div class="carousel-item col-md-4">
                                 <div class="card research-card">
                                   <div class="card-img-top card-img-top-250">
+                                  </div>
+                                  <div class="card-body">
+                                      <h5 class="card-title">Research Assistant</h5>
+                                      <p class="card-text">Software development for the Materials Science lab Shtein Lab at the University of Michgian</p>
+                                      <p class="card-text">Developed hardware (flex PCB, Particle, Arduino) and software (C/C++)  for a kirigami sensor project</p>
+                                      <p class="card-text">Design, build, and program a novel 3D printer (Marlin, OctoPi, Python, C/C++, Peltier, RAMP)</p>
+                                      <a href="https://shteinlab.engin.umich.edu/profile/tony-pan/" target="_blank" class="btn btn-outline-primary">Shtein Lab</a>
+                                      <p class="card-text"><small class="text-muted">November 2018 - July 2019</small></p>
+                                    </div>
+                              </div>
+                              </div>
+                            <div class="carousel-item col-md-4">
+                                <div class="card research-card">
+                                  <div class="card-img-top card-img-top-250">
                                     <figure>
                                         <img class="img-fluid" src="images/isef.jpg" alt="Intel ISEF">
                                     </figure>
@@ -257,31 +305,7 @@
                                       <p class="card-text"><small class="text-muted">Competed in May 2018</small></p>
                                     </div>
                               </div>
-                              </div>
-                              <div class="carousel-item col-md-4">
-                                  <div class="card research-card">
-                                    <div class="card-img-top card-img-top-250">
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Shtein Lab</h5>
-                                        <p class="card-text">Develope hardware and software for a kirigami sensor project</p>
-                                        <p class="card-text">Design, build, and program a novel 3D printer</p>
-                                        <a href="https://shteinlab.engin.umich.edu/profile/tony-pan/" target="_blank" class="btn btn-outline-primary">Shtein Lab</a>
-                                        <p class="card-text"><small class="text-muted">November 2018 - present</small></p>
-                                      </div>
-                                </div>
-                                </div>
-                                <div class="carousel-item col-md-4">
-                                    <div class="card research-card">
-                                      <div class="card-img-top card-img-top-250">
-                                      </div>
-                                      <div class="card-body">
-                                          <h5 class="card-title">SOAR Cognitive Architecture</h5>
-                                          <p class="card-text">Integrate SOAR cognitive architecture with Anki's Cozmo robots</p>
-                                          <p class="card-text"><small class="text-muted">January 2019 - present</small></p>
-                                        </div>
-                                  </div>
-                                  </div>
+                              </div>       
                   </div>    
             </div>
           </div>
@@ -312,17 +336,17 @@
                   <div class="col-8">
                     <div class="tab-content" id="nav-tabContent">
                       <div class="tab-pane fade active show" id="list-research" role="tabpanel" aria-labelledby="list-research-list">
-                        <h6>Shtein Lab</h6>  
+                        <h6>Soar Cognitive Architecture</h6>  
                         <ul style="list-style-type:disc;">
-                              <li>Embedded programming for Particle Photon for a kirigami sensor in C/C++</li>
-                              <li>Embedded programming with Marlin firmware in the Arduino environment for a 3D printer
-                                and Printrun user interface in Python
-                              </li>
+                              <li>Wrote multithreaded Python programs and used OpenCV for localizing Anki Cozmo robots</li>
+                              <li>Wrote Soar production code with reinforcement learning to train Cozmo robots</li>
                             </ul>
-                        <h6>SOAR Cognitive Architecture</h6>  
+                            <h6>Shtein Lab</h6>  
                         <ul style="list-style-type:disc;">
-                              <li>Wrote Python code to control Anki Cozmo robots</li>
-                              <li>Wrote SOAR production code to integrate with Cozmo robots</li>
+                              <li>Embedded programming for Particle Photon in C/C++</li>
+                              <li>Embedded programming with Marlin firmware in the Arduino environment
+                                and Printrun/Octopi UI in Python
+                              </li>
                             </ul>
                         <h6>Weizmann ISSI</h6>  
                         <ul style="list-style-type:disc;">
@@ -361,9 +385,9 @@
                         </div>
                       <div class="tab-pane fade" id="list-Other" role="tabpanel" aria-labelledby="list-Other-list">
                         <p>Programming Languages:<br>
-                        C/C++, Java, Git, HTML, Python, ImageJ Macro, SOAR, Linux, MATLAB, Assembly, Ruby<br><br><br><br>
-                        Industry Knowledge:<br>
-                        Robotics, Research, Web Dev, Software Engineering</p>
+                          C++/C, Python, Java, Git, HTML/CSS, Soar, ImageJ, Assembly, Matlab<br><br><br><br>
+                        Robotics:<br>
+                        OpenCV, SLAM (with Lidar), LCM, Arduino, Raspberry Pi, Particle, Beaglebone</p>
                       </div>
                     </div>
                   </div>
