--- a/weizmann.html
+++ b/weizmann.html
@@ -118,6 +118,9 @@
                                 <a href="isef.html">high school science project</a> 
                                 that earned me this opportunity.
                             </p>
+                            <p>
+                                This project was later published, read about it <a href="spie.html">here</a>.
+                            </p>
                         <a href="index.html#section2" class="card-link" onclick="windowClose();">Close Tab</a>
                     </div>
                 </div>
