resume edit, added links

--- a/soar.html
+++ b/soar.html
@@ -55,11 +55,15 @@
                                 camera system for localization and reducing global cumulative odometry
                                  error in robot mapping using ArUco fiducials from the OpenCV computer vision library, linear transformations and 
                                  change of basis, and multithreaded Python programming.</p>
-                                 <p>Keywords: robot mapping, localization, linear algebra, computer vision</p>
+                                 <p>Keywords: localization, linear algebra, computer vision, odometry, robot mapping</p>
                                  <p>Status: seeking opportunity to publish</p>
                         
                             <h5 class="card-title text-center"> Reinforcement Learning </h5>
-                            <p>We are integrating the Soar Cognitive Architecture with Anki's Cozmo robots. We are writing Soar production code
+                            <p>We are integrating the 
+                              <a target="_blank" href="https://soar.eecs.umich.edu/">Soar Cognitive Architecture </a>
+                              with Anki's 
+                              <a target="_blank" href="https://anki.com/en-us/cozmo.html">Cozmo </a>
+                              robots. We are writing Soar production code
                                 and some Python programs to control Cozmo. One of the goals of the project is to use Reinforcement Learning in
                                 Soar to train intelligent agents to complete simple tasks such as stacking cubes and exploring unknown 
                                 environments with rewards. 
